buttons layout on mobile

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 					<!-- Wordle Solver -->
 					<div class="col-12 col-md-8 col-lg-5">
 						<div class="row center">
-							<div class="col-3 center">
+							<div class="col-6 col-md-3 center">
 								<div class="img-container">
 									<img src="images/wordle.png" alt="wordle" data-position="center center">
 								</div>
 							</div>
-							<div class="col-9">
+							<div class="col-6 col-md-9">
 								<h3>Wordle Solver</h3>
 								<ul class="tools-list">
 									<li>Python</li>
@@ -67,7 +67,7 @@
 									<a target=_blank href="https://github.com/anniebryan/wordle-solver" class="button small">Code</a>
 								</div>
 							</div>
-							<div class="col-12 center hide-xxl">
+							<div class="col-12 center hide-xxl ">
 								<div class="buttons center">
 									<a target=_blank href="https://github.com/anniebryan/wordle-solver" class="button small">Code</a>
 								</div>
@@ -86,12 +86,12 @@
 					<!-- Effects of Access to Recreational Cannabis on Home Values -->
 					<div class="col-12 col-md-8 col-lg-5">
 						<div class="row center">
-							<div class="col-3 center">
+							<div class="col-6 col-md-3 center">
 								<div class="img-container">
 									<img src="images/stata.png" alt="stata" data-position="center center">
 								</div>
 							</div>
-							<div class="col-9">
+							<div class="col-6 col-md-9">
 								<h3>Effects of Access to Recreational Cannabis on Home Values</h3>
 								<ul class="tools-list">
 									<li>Stata</li>
@@ -119,12 +119,12 @@
 					<!-- Survey of Cryptographic Developments -->
 					<div class="col-12 col-md-8 col-lg-5">
 						<div class="row center">
-							<div class="col-3 center">
+							<div class="col-6 col-md-3 center">
 								<div class="img-container">
 									<img src="images/crypto.png" alt="crypto" data-position="center center">
 								</div>
 							</div>
-							<div class="col-9">
+							<div class="col-6 col-md-9">
 								<h3>Survey of Cryptographic Developments</h3>
 								<ul class="tools-list">
 									<li>RSA</li>
@@ -154,12 +154,12 @@
 					<!-- Interface for ML Interpretability -->
 					<div class="col-12 col-md-8 col-lg-5">
 						<div class="row center">
-							<div class="col-3 center">
+							<div class="col-6 col-md-3 center">
 								<div class="img-container">
 									<img src="images/vis.png" alt="spotify" data-position="center center">
 								</div>
 							</div>
-							<div class="col-9">
+							<div class="col-6 col-md-9">
 								<h3>Interface for Machine Learning Interpretability</h3>
 								<ul class="tools-list">
 									<li>React</li>
@@ -190,12 +190,12 @@
 					<!-- Interlock for Self-Driving Cars -->
 					<div class="col-12 col-md-8 col-lg-5">
 						<div class="row center">
-							<div class="col-3 center">
+							<div class="col-6 col-md-3 center">
 								<div class="img-container">
 									<img src="images/csail.png" alt="csail" data-position="center center">
 								</div>
 							</div>
-							<div class="col-9">
+							<div class="col-6 col-md-9">
 								<h3>Interlock for Self-Driving Cars</h3>
 								<ul class="tools-list">
 									<li>Python</li>
@@ -239,12 +239,12 @@
 					<!-- Tempo -->
 					<div class="col-12 col-md-8 col-lg-5">
 						<div class="row center">
-							<div class="col-3 center">
+							<div class="col-6 col-md-3 center">
 								<div class="img-container">
 									<img src="images/spotify.png" alt="spotify" data-position="center center">
 								</div>
 							</div>
-							<div class="col-9">
+							<div class="col-6 col-md-9">
 								<h3>Tempo</h3>
 								<ul class="tools-list">
 									<li>Python requests</li>
@@ -276,12 +276,12 @@
 					<!-- Covid Data Analysis -->
 					<div class="col-12 col-md-8 col-lg-5">
 						<div class="row center">
-							<div class="col-3 center">
+							<div class="col-6 col-md-3 center">
 								<div class="img-container">
 									<img src="images/covid.png" alt="covid" data-position="center center">
 								</div>
 							</div>
-							<div class="col-9">
+							<div class="col-6 col-md-9">
 								<h3>COVID-19 Data Analysis</h3>
 								<ul class="tools-list">
 									<li>Python</li>
@@ -314,12 +314,12 @@
 					<!-- Recipe Saver -->
 					<div class="col-12 col-md-8 col-lg-5">
 						<div class="row center">
-							<div class="col-3 center">
+							<div class="col-6 col-md-3 center">
 								<div class="img-container">
 									<img src="images/utensils.png" alt="utensils" data-position="center center">
 								</div>
 							</div>
-							<div class="col-9">
+							<div class="col-6 col-md-9">
 								<h3>Recipe Saver</h3>
 								<ul class="tools-list">
 									<li>MongoDB</li>
@@ -350,12 +350,12 @@
 					<!-- Tetris -->
 					<div class="col-12 col-md-8 col-lg-5">
 						<div class="row center">
-							<div class="col-3 center">
+							<div class="col-6 col-md-3 center">
 								<div class="img-container">
 									<img src="images/tetris.png" alt="tetris" data-position="center center">
 								</div>
 							</div>
-							<div class="col-9">
+							<div class="col-6 col-md-9">
 								<h3>Tetris</h3>
 								<ul class="tools-list">
 									<li>HTML5</li>
