image layout/spacing on mobile

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 									<a target=_blank href="https://github.com/anniebryan/wordle-solver" class="button small">Code</a>
 								</div>
 							</div>
-							<div class="col-12 center hide-xxl ">
+							<div class="col-12 center hide-xxl margin-top-10 ">
 								<div class="buttons center">
 									<a target=_blank href="https://github.com/anniebryan/wordle-solver" class="button small">Code</a>
 								</div>
@@ -101,7 +101,7 @@
 									<a target=_blank href="https://github.com/anniebryan/14.33-project" class="button small">Code</a>
 								</div>
 							</div>
-							<div class="col-12 center hide-xxl">
+							<div class="col-12 center hide-xxl margin-top-10">
 								<div class="buttons center">
 									<a target=_blank href="files/14_33_Final_Paper.pdf" class="button small">Paper</a>
 									<a target=_blank href="https://github.com/anniebryan/14.33-project" class="button small">Code</a>
@@ -135,7 +135,7 @@
 									<a target=_blank href="files/18_204_Term_Paper.pdf" class="button small">Paper</a>
 								</div>
 							</div>
-							<div class="col-12 center hide-xxl">
+							<div class="col-12 center hide-xxl margin-top-10">
 								<div class="buttons center">
 									<a target=_blank href="files/18_204_Term_Paper.pdf" class="button small">Paper</a>
 								</div>
@@ -172,7 +172,7 @@
 									<a target=_blank href="http://vis.csail.mit.edu/" class="button small">About</a>
 								</div>
 							</div>
-							<div class="col-12 center hide-xxl">
+							<div class="col-12 center hide-xxl margin-top-10">
 								<div class="buttons center">
 									<a target=_blank href="http://mltesting.csail.mit.edu/" class="button small">Link</a>
 									<a target=_blank href="http://vis.csail.mit.edu/" class="button small">About</a>
@@ -207,7 +207,7 @@
 									<a target=_blank href="interlock.mp4" class="button small remove-margin">Video</a>
 								</div>
 							</div>
-							<div class="col-12 center hide-mobile hide-xxl">
+							<div class="col-12 center hide-mobile hide-xxl margin-top-10">
 								<div class="buttons center">
 									<a target=_blank href="https://www.csail.mit.edu/research/interlock-self-driving-cars" class="button small">Link</a>
 									<a target=_blank href="https://github.com/interlock-mit/interlock" class="button small">Code</a>
@@ -257,7 +257,7 @@
 									<a target=_blank href="writeup.md.html" class="button small">Writeup</a>
 								</div>
 							</div>
-							<div class="col-12 center hide-xxl">
+							<div class="col-12 center hide-xxl margin-top-10">
 								<div class="buttons center">
 									<a target=_blank href="https://www.youtube.com/watch?v=w7C_8jrciyQ" class="button small">Video</a>
 									<a target=_blank href="writeup.md.html" class="button small">Writeup</a>
@@ -294,7 +294,7 @@
 									<a target=_blank href="https://github.com/anniebryan/covid-data-analysis" class="button small">Code</a>
 								</div>
 							</div>
-							<div class="col-12 center hide-xxl">
+							<div class="col-12 center hide-xxl margin-top-10">
 								<div class="buttons center">
 									<a target=_blank href="https://nbviewer.jupyter.org/github/anniebryan/covid-data-analysis/blob/master/covid-data-analysis.ipynb" class="button small">Demo</a>
 									<a target=_blank href="https://github.com/anniebryan/covid-data-analysis" class="button small">Code</a>
@@ -332,7 +332,7 @@
 									<a target=_blank href="https://github.com/anniebryan/recipe-saver" class="button small">Code</a>
 								</div>
 							</div>
-							<div class="col-12 center hide-xxl">
+							<div class="col-12 center hide-xxl margin-top-10">
 								<div class="buttons center">
 									<a target=_blank href="https://recipe-saver-app.herokuapp.com/" class="button small disabled">Demo</a>
 									<a target=_blank href="https://github.com/anniebryan/recipe-saver" class="button small">Code</a>
@@ -367,7 +367,7 @@
 									<a target=_blank href="https://github.com/anniebryan/tetris" class="button small">Code</a>
 								</div>
 							</div>
-							<div class="col-12 center hide-xxl">
+							<div class="col-12 center hide-xxl margin-top-10">
 								<div class="buttons center">
 									<a target=_blank href="https://htmlpreview.github.io/?https://github.com/anniebryan/tetris/blob/master/index.html" class="button small">Demo</a>
 									<a target=_blank href="https://github.com/anniebryan/tetris" class="button small">Code</a>
