--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				<div class="project row justify-content-center" style="margin-right: 0px;">
 
 					<!-- Effects of Access to Recreational Cannabis on Home Values -->
-					<div class="col-12 col-md-8 col-lg-5">
+					<div class="col-12 col-md-8 col-lg-5 padding-bottom-mobile">
 						<div class="row center">
 							<div class="col-6 col-md-3 center">
 								<div class="img-container">
@@ -117,7 +117,7 @@
 					<div class="col-lg-1 show-lg"></div>
 
 					<!-- Survey of Cryptographic Developments -->
-					<div class="col-12 col-md-8 col-lg-5">
+					<div class="col-12 col-md-8 col-lg-5 padding-top-mobile">
 						<div class="row center">
 							<div class="col-6 col-md-3 center">
 								<div class="img-container">
@@ -152,7 +152,7 @@
 				<div class="project row justify-content-center" style="margin-right: 0px;">
 
 					<!-- Interface for ML Interpretability -->
-					<div class="col-12 col-md-8 col-lg-5">
+					<div class="col-12 col-md-8 col-lg-5 padding-bottom-mobile">
 						<div class="row center">
 							<div class="col-6 col-md-3 center">
 								<div class="img-container">
@@ -188,7 +188,7 @@
 					<div class="col-lg-1 show-lg"></div>
 
 					<!-- Interlock for Self-Driving Cars -->
-					<div class="col-12 col-md-8 col-lg-5">
+					<div class="col-12 col-md-8 col-lg-5 padding-top-mobile">
 						<div class="row center">
 							<div class="col-6 col-md-3 center">
 								<div class="img-container">
@@ -237,7 +237,7 @@
 				<div class="project row justify-content-center" style="margin-right: 0px;">
 
 					<!-- Tempo -->
-					<div class="col-12 col-md-8 col-lg-5">
+					<div class="col-12 col-md-8 col-lg-5 padding-bottom-mobile">
 						<div class="row center">
 							<div class="col-6 col-md-3 center">
 								<div class="img-container">
@@ -270,11 +270,10 @@
 							</div>
 						</div>
 					</div>
-
 					<div class="col-lg-1 show-lg"></div>
 
 					<!-- Covid Data Analysis -->
-					<div class="col-12 col-md-8 col-lg-5">
+					<div class="col-12 col-md-8 col-lg-5 padding-top-mobile">
 						<div class="row center">
 							<div class="col-6 col-md-3 center">
 								<div class="img-container">
@@ -312,7 +311,7 @@
 				<div class="project row justify-content-center" style="margin-right: 0px;">
 
 					<!-- Recipe Saver -->
-					<div class="col-12 col-md-8 col-lg-5">
+					<div class="col-12 col-md-8 col-lg-5 padding-bottom-mobile">
 						<div class="row center">
 							<div class="col-6 col-md-3 center">
 								<div class="img-container">
@@ -348,7 +347,7 @@
 					<div class="col-lg-1 show-lg"></div>
 
 					<!-- Tetris -->
-					<div class="col-12 col-md-8 col-lg-5">
+					<div class="col-12 col-md-8 col-lg-5 padding-top-mobile">
 						<div class="row center">
 							<div class="col-6 col-md-3 center">
 								<div class="img-container">
