rename and reorder buttons

--- a/index.html
+++ b/index.html
@@ -168,13 +168,13 @@
 									<li>sklearn</li>
 								</ul>
 								<div class="buttons show-xxl">
-									<a target=_blank href="http://mltesting.csail.mit.edu/" class="button small">Link</a>
+									<a target=_blank href="http://mltesting.csail.mit.edu/" class="button small">Demo</a>
 									<a target=_blank href="http://vis.csail.mit.edu/" class="button small">About</a>
 								</div>
 							</div>
 							<div class="col-12 center hide-xxl margin-top-10">
 								<div class="buttons center">
-									<a target=_blank href="http://mltesting.csail.mit.edu/" class="button small">Link</a>
+									<a target=_blank href="http://mltesting.csail.mit.edu/" class="button small">Demo</a>
 									<a target=_blank href="http://vis.csail.mit.edu/" class="button small">About</a>
 								</div>
 							</div>
@@ -202,27 +202,27 @@
 									<li>CARLA</li>
 								</ul>
 								<div class="buttons show-xxl">
-									<a target=_blank href="https://www.csail.mit.edu/research/interlock-self-driving-cars" class="button small">Link</a>
-									<a target=_blank href="https://github.com/interlock-mit/interlock" class="button small">Code</a>
 									<a target=_blank href="interlock.mp4" class="button small remove-margin">Video</a>
+									<a target=_blank href="https://www.csail.mit.edu/research/interlock-self-driving-cars" class="button small">About</a>
+									<a target=_blank href="https://github.com/interlock-mit/interlock" class="button small">Code</a>
 								</div>
 							</div>
 							<div class="col-12 center hide-mobile hide-xxl margin-top-10">
 								<div class="buttons center">
-									<a target=_blank href="https://www.csail.mit.edu/research/interlock-self-driving-cars" class="button small">Link</a>
-									<a target=_blank href="https://github.com/interlock-mit/interlock" class="button small">Code</a>
 									<a target=_blank href="interlock.mp4" class="button small remove-margin">Video</a>
+									<a target=_blank href="https://www.csail.mit.edu/research/interlock-self-driving-cars" class="button small">About</a>
+									<a target=_blank href="https://github.com/interlock-mit/interlock" class="button small">Code</a>
 								</div>
 							</div>
 							<div class="col-12 center margin-bottom-16 show-mobile">
 								<div class="buttons center">
-									<a target=_blank href="https://www.csail.mit.edu/research/interlock-self-driving-cars" class="button small">Link</a>
-									<a target=_blank href="https://github.com/interlock-mit/interlock" class="button small">Code</a>
+									<a target=_blank href="interlock.mp4" class="button small remove-margin">Video</a>
+									<a target=_blank href="https://www.csail.mit.edu/research/interlock-self-driving-cars" class="button small">About</a>
 								</div>
 							</div>
 							<div class="col-12 center show-mobile">
 								<div class="buttons center">
-									<a target=_blank href="interlock.mp4" class="button small remove-margin">Video</a>
+									<a target=_blank href="https://github.com/interlock-mit/interlock" class="button small">Code</a>
 								</div>
 							</div>
 						</div>
