update index.html with new bio

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<div class="inner">
 					<h1>Annie Bryan</h1>
 					<h3 id="add-margin-bottom">
-						I'm an incoming software engineer for <a target=_blank href="https://about.facebook.com/">Meta</a> in Boston, MA.
+						I'm a software engineer for <a target=_blank href="https://about.facebook.com/">Meta</a> in Boston, MA.
                         <br></br>
                         This May, I graduated from MIT, where I double-majored in Computer Science and Mathematical Economics and played on the 
                         <a target=_blank href="https://mitathletics.com/sports/womens-volleyball/roster/annie-bryan/9290">volleyball team</a>. 
