add arrow street capital to intro

--- a/index.html
+++ b/index.html
@@ -39,14 +39,11 @@
 				<div class="inner">
 					<h1>Annie Bryan</h1>
 					<h3 id="add-margin-bottom">
-						I'm a software engineer for <a target=_blank href="https://about.facebook.com/">Meta</a> in Boston, MA.
-                        <br></br>
-                        This May, I graduated from MIT, where I double-majored in Computer Science and Mathematical Economics and played on the 
-                        <a target=_blank href="https://mitathletics.com/sports/womens-volleyball/roster/annie-bryan/9290">volleyball team</a>. 
-                        <br></br>
-                        In my free time, I love to 
-						<a href="https://anniebryan.github.io/about-me.html">crochet</a> 
-						and play with my dog, Tucker.
+						I'm an incoming quantitative developer for <a target=_blank href="https://www.arrowstreetcapital.com/">Arrow Street Capital</a> in Boston, MA.
+            <br><br>
+            This May, I graduated from MIT, where I double-majored in Computer Science and Mathematical Economics and played on the <a target=_blank href="https://mitathletics.com/sports/womens-volleyball/roster/annie-bryan/9290">volleyball team</a>. 
+            <br><br>
+            In my free time, I love to crochet and play with my dog, Tucker.
 					</h3>
 					<ul class="actions">
 						<li><a target=_blank href="files/Annie-Bryan-Resume.pdf" class="primary button">Resume <i class="fa fa-download" aria-hidden="true"></i></a></li>
