--- a/index.html
+++ b/index.html
@@ -85,42 +85,43 @@
 							</div>
 						</div>
 					</div>
-				</div>
+          <div class="col-lg-1 show-lg"></div>
+
+          <!-- Effects of Access to Recreational Cannabis on Home Values -->
+          <div class="col-12 col-md-8 col-lg-5 padding-bottom-mobile">
+            <div class="row center">
+              <div class="col-6 col-md-3 center">
+                <div class="img-container">
+                  <img src="images/stata.png" alt="stata" data-position="center center">
+                </div>
+              </div>
+              <div class="col-6 col-md-9">
+                <h3>Effects of Access to Recreational Cannabis on Home Values</h3>
+                <ul class="tools-list">
+                  <li>Stata</li>
+                </ul>
+                <div class="buttons show-xxl">
+                  <a target=_blank href="files/14_33_Final_Paper.pdf" class="button small">Paper</a>
+                  <a target=_blank href="https://github.com/anniebryan/14.33-project" class="button small">Code</a>
+                </div>
+              </div>
+              <div class="col-12 center hide-xxl margin-top-10">
+                <div class="buttons center">
+                  <a target=_blank href="files/14_33_Final_Paper.pdf" class="button small">Paper</a>
+                  <a target=_blank href="https://github.com/anniebryan/14.33-project" class="button small">Code</a>
+                </div>
+              </div>
+            </div>
+            <div class="row description-text">
+              <div class="col-12 justify">
+                <p>Cleaned, processed, and analyzed datasets to quantify the effect that legalization of recreational marijuana
+                  and the presence of retail dispensaries have on nearby home values.</p>
+              </div>
+            </div>
+          </div>
+        </div>
 
 				<div class="project row justify-content-center" style="margin-right: 0px;">
-
-					<!-- Effects of Access to Recreational Cannabis on Home Values -->
-					<div class="col-12 col-md-8 col-lg-5 padding-bottom-mobile">
-						<div class="row center">
-							<div class="col-6 col-md-3 center">
-								<div class="img-container">
-									<img src="images/stata.png" alt="stata" data-position="center center">
-								</div>
-							</div>
-							<div class="col-6 col-md-9">
-								<h3>Effects of Access to Recreational Cannabis on Home Values</h3>
-								<ul class="tools-list">
-									<li>Stata</li>
-								</ul>
-								<div class="buttons show-xxl">
-									<a target=_blank href="files/14_33_Final_Paper.pdf" class="button small">Paper</a>
-									<a target=_blank href="https://github.com/anniebryan/14.33-project" class="button small">Code</a>
-								</div>
-							</div>
-							<div class="col-12 center hide-xxl margin-top-10">
-								<div class="buttons center">
-									<a target=_blank href="files/14_33_Final_Paper.pdf" class="button small">Paper</a>
-									<a target=_blank href="https://github.com/anniebryan/14.33-project" class="button small">Code</a>
-								</div>
-							</div>
-						</div>
-						<div class="row description-text">
-							<div class="col-12 justify">
-								<p>Cleaned, processed, and analyzed datasets to quantify the effect that legalization of recreational marijuana and the presence of retail dispensaries have on nearby home values.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-1 show-lg"></div>
 
 					<!-- Survey of Cryptographic Developments -->
 					<div class="col-12 col-md-8 col-lg-5 padding-top-mobile">
@@ -153,9 +154,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
-        
-				<div class="project row justify-content-center" style="margin-right: 0px;">
+          <div class="col-lg-1 show-lg"></div>
 
 					<!-- Interface for ML Interpretability -->
 					<div class="col-12 col-md-8 col-lg-5 padding-bottom-mobile">
@@ -190,8 +189,10 @@
 								<p>Created a UI for users to build NLP models, define and run test cases, and visualize the results.</p>
 							</div>
 						</div>
-          			</div>
-					<div class="col-lg-1 show-lg"></div>
+          </div>
+        </div>
+
+        <div class="project row justify-content-center" style="margin-right: 0px;">
 
 					<!-- Interlock for Self-Driving Cars -->
 					<div class="col-12 col-md-8 col-lg-5 padding-top-mobile">
@@ -238,9 +239,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
-
-				<div class="project row justify-content-center" style="margin-right: 0px;">
+          <div class="col-lg-1 show-lg"></div>
 
 					<!-- Tempo -->
 					<div class="col-12 col-md-8 col-lg-5 padding-bottom-mobile">
@@ -276,79 +275,45 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-1 show-lg"></div>
+        </div>
 
-					<!-- Covid Data Analysis -->
-					<div class="col-12 col-md-8 col-lg-5 padding-top-mobile">
-						<div class="row center">
-							<div class="col-6 col-md-3 center">
-								<div class="img-container">
-									<img src="images/covid.png" alt="covid" data-position="center center">
-								</div>
-							</div>
-							<div class="col-6 col-md-9">
-								<h3>COVID-19 Data Analysis</h3>
-								<ul class="tools-list">
-									<li>Python</li>
-									<li>pandas</li>
-									<li>numpy</li>
-									<li>matplotlib</li>
-								</ul>
-								<div class="buttons show-xxl">
-									<a target=_blank href="https://nbviewer.jupyter.org/github/anniebryan/covid-data-analysis/blob/master/covid-data-analysis.ipynb" class="button small">Demo</a>
-									<a target=_blank href="https://github.com/anniebryan/covid-data-analysis" class="button small">Code</a>
-								</div>
-							</div>
-							<div class="col-12 center hide-xxl margin-top-10">
-								<div class="buttons center">
-									<a target=_blank href="https://nbviewer.jupyter.org/github/anniebryan/covid-data-analysis/blob/master/covid-data-analysis.ipynb" class="button small">Demo</a>
-									<a target=_blank href="https://github.com/anniebryan/covid-data-analysis" class="button small">Code</a>
-								</div>
-							</div>
-						</div>
-						<div class="row description-text">
-							<div class="col-12 justify">
-								<p>Cleaning and exploring the Johns Hopkins COVID-19 dataset and building models to analyze the effects of state-imposed stay-at-home policy.</p>
-							</div>
-						</div>
-					</div>
-				</div>
+        <div class="project row justify-content-center" style="margin-right: 0px;">
 
-				<div class="project row justify-content-center" style="margin-right: 0px;">
-
-					<!-- Recipe Saver -->
-					<div class="col-12 col-md-8 col-lg-5 padding-bottom-mobile">
-						<div class="row center">
-							<div class="col-6 col-md-3 center">
-								<div class="img-container">
-									<img src="images/utensils.png" alt="utensils" data-position="center center">
-								</div>
-							</div>
-							<div class="col-6 col-md-9">
-								<h3>Recipe Saver</h3>
-								<ul class="tools-list">
-									<li>MongoDB</li>
-									<li>Express</li>
-									<li>React</li>
-									<li>Node JS</li>
-								</ul>
-								<div class="buttons show-xxl">
-									<a target=_blank href="https://github.com/anniebryan/recipe-saver" class="button small">Code</a>
-								</div>
-							</div>
-							<div class="col-12 center hide-xxl margin-top-10">
-								<div class="buttons center">
-									<a target=_blank href="https://github.com/anniebryan/recipe-saver" class="button small">Code</a>
-								</div>
-							</div>
-						</div>
-						<div class="row description-text">
-							<div class="col-12 justify">
-								<p>A full-stack CRUD application that allows the user to view, add, edit, and delete recipes.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-1 show-lg"></div>
+          <!-- Covid Data Analysis -->
+          <div class="col-12 col-md-8 col-lg-5 padding-top-mobile">
+            <div class="row center">
+              <div class="col-6 col-md-3 center">
+                <div class="img-container">
+                  <img src="images/covid.png" alt="covid" data-position="center center">
+                </div>
+              </div>
+              <div class="col-6 col-md-9">
+                <h3>COVID-19 Data Analysis</h3>
+                <ul class="tools-list">
+                  <li>Python</li>
+                  <li>pandas</li>
+                  <li>numpy</li>
+                  <li>matplotlib</li>
+                </ul>
+                <div class="buttons show-xxl">
+                  <a target=_blank href="https://nbviewer.jupyter.org/github/anniebryan/covid-data-analysis/blob/master/covid-data-analysis.ipynb" class="button small">Demo</a>
+                  <a target=_blank href="https://github.com/anniebryan/covid-data-analysis" class="button small">Code</a>
+                </div>
+              </div>
+              <div class="col-12 center hide-xxl margin-top-10">
+                <div class="buttons center">
+                  <a target=_blank href="https://nbviewer.jupyter.org/github/anniebryan/covid-data-analysis/blob/master/covid-data-analysis.ipynb" class="button small">Demo</a>
+                  <a target=_blank href="https://github.com/anniebryan/covid-data-analysis" class="button small">Code</a>
+                </div>
+              </div>
+            </div>
+            <div class="row description-text">
+              <div class="col-12 justify">
+                <p>Cleaning and exploring the Johns Hopkins COVID-19 dataset and building models to analyze the effects of state-imposed stay-at-home policy.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-1 show-lg"></div>
 
 					<!-- Tetris -->
 					<div class="col-12 col-md-8 col-lg-5 padding-top-mobile">
