--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 	<head>
 		<title>Annie Bryan</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="assets/css/bootstrap-grid.css" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+		<link rel="stylesheet" href="assets/css/main.css"/>
+		<link rel="stylesheet" href="assets/css/bootstrap-grid.css"/>
 		<link rel="shortcut icon" type="image/jpg" href="images/favicon.ico"/>
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"/>
+    <link rel="stylesheet" href="/assets/css/fontawesome-all.min.css"/>
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css"/></noscript>
 	</head>
 	<body class="is-preload">
 
