--- a/index.html
+++ b/index.html
@@ -362,14 +362,14 @@
 							<h3>Front End</h3>
 							<div class="row">
 								<div class="col-6">
-									<ul class="dash">
+									<ul class="dash skills">
 										<li>HTML5</li>
 										<li>CSS3</li>
 										<li>JavaScript</li>
 									</ul>
 								</div>
 								<div class="col-6">
-									<ul class="dash">
+									<ul class="dash skills">
 										<li>React</li>
 										<li>jQuery</li>
 										<li>Bootstrap</li>
@@ -382,19 +382,17 @@
 							<h3>Back End</h3>
 							<div class="row">
 								<div class="col-6">
-									<ul class="dash">
+									<ul class="dash skills">
 										<li>Python</li>
 										<li>Java</li>
 										<li>Flask</li>
-										<li>NodeJS</li>
 									</ul>
 								</div>
 								<div class="col-6">
-									<ul class="dash">
+									<ul class="dash skills">
+                    <li>Node</li>
 										<li>Ruby on Rails</li>
-										<li>PHP/Hack</li>
-										<li>MySQL</li>
-										<li>MongoDB</li>
+										<li>PHP</li>
 									</ul>
 								</div>
 							</div>
@@ -404,21 +402,45 @@
 							<h3>Data Analysis</h3>
 							<div class="row">
 								<div class="col-6">
-									<ul class="dash">
+									<ul class="dash skills">
+										<li>Numpy</li>
+										<li>Pandas</li>
 										<li>Stata</li>
-										<li>MATLAB</li>
-										<li>Julia</li>
-										<li>R</li>
 									</ul>
 								</div>
+                <div class="col-6">
+                  <ul class="dash skills">
+                    <li>MATLAB</li>
+                    <li>Julia</li>
+                    <li>R</li>
+                  </ul>
+                </div>
 							</div>
 						</section>
+            <section>
+              <span class="icon solid major fa-brain"></span>
+              <h3>Machine Learning</h3>
+              <div class="row">
+                <div class="col-6">
+                  <ul class="dash skills">
+                    <li>TensorFlow</li>
+                    <li>Keras</li>
+                  </ul>
+                </div>
+                <div class="col-6">
+                  <ul class="dash skills">
+                    <li>Scikit Learn</li>
+                    <li>Pytorch</li>
+                  </ul>
+                </div>
+              </div>
+            </section>
 						<section>
 							<span class="icon solid major fa-desktop"></span>
 							<h3>Methodologies</h3>
 							<div class="row">
 								<div class="col-6">
-									<ul class="dash">
+									<ul class="dash skills">
 										<li>Agile</li>
 										<li>Scrum</li>
 										<li>Kanban</li>
@@ -431,22 +453,10 @@
 							<h3>Version Control</h3>
 							<div class="row">
 								<div class="col-6">
-									<ul class="dash">
+									<ul class="dash skills">
 										<li>Git</li>
 										<li>Perforce</li>
 										<li>Mercurial</li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<span class="icon solid major fa fa-globe"></span>
-							<h3>Languages</h3>
-							<div class="row">
-								<div class="col-12">
-									<ul class="dash">
-										<li>English (native)</li>
-										<li>Spanish (working proficiency)</li>
 									</ul>
 								</div>
 							</div>
