move video and writeup to files folder

--- a/index.html
+++ b/index.html
@@ -210,21 +210,21 @@
 									<li>CARLA</li>
 								</ul>
 								<div class="buttons show-xxl">
-									<a target=_blank href="interlock.mp4" class="button small remove-margin">Video</a>
+									<a target=_blank href="files/interlock.mp4" class="button small remove-margin">Video</a>
 									<a target=_blank href="https://www.csail.mit.edu/research/interlock-self-driving-cars" class="button small">About</a>
 									<a target=_blank href="https://github.com/interlock-mit/interlock" class="button small">Code</a>
 								</div>
 							</div>
 							<div class="col-12 center hide-mobile hide-xxl margin-top-10">
 								<div class="buttons center">
-									<a target=_blank href="interlock.mp4" class="button small remove-margin">Video</a>
+									<a target=_blank href="files/interlock.mp4" class="button small remove-margin">Video</a>
 									<a target=_blank href="https://www.csail.mit.edu/research/interlock-self-driving-cars" class="button small">About</a>
 									<a target=_blank href="https://github.com/interlock-mit/interlock" class="button small">Code</a>
 								</div>
 							</div>
 							<div class="col-12 center margin-bottom-16 show-mobile">
 								<div class="buttons center">
-									<a target=_blank href="interlock.mp4" class="button small remove-margin">Video</a>
+									<a target=_blank href="files/interlock.mp4" class="button small remove-margin">Video</a>
 									<a target=_blank href="https://www.csail.mit.edu/research/interlock-self-driving-cars" class="button small">About</a>
 								</div>
 							</div>
@@ -260,13 +260,13 @@
 								</ul>
 								<div class="buttons show-xxl">
 									<a target=_blank href="https://www.youtube.com/watch?v=w7C_8jrciyQ" class="button small">Video</a>
-									<a target=_blank href="writeup.md.html" class="button small">Writeup</a>
+									<a target=_blank href="files/writeup.md.html" class="button small">Writeup</a>
 								</div>
 							</div>
 							<div class="col-12 center hide-xxl margin-top-10">
 								<div class="buttons center">
 									<a target=_blank href="https://www.youtube.com/watch?v=w7C_8jrciyQ" class="button small">Video</a>
-									<a target=_blank href="writeup.md.html" class="button small">Writeup</a>
+									<a target=_blank href="files/writeup.md.html" class="button small">Writeup</a>
 								</div>
 							</div>
 						</div>
