--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<h3 id="add-margin-bottom">
 						I'm a quantitative developer for <a target=_blank href="https://www.arrowstreetcapital.com/">Arrow Street Capital</a> in Boston, MA.
             <br><br>
-            This May, I graduated from MIT, where I double-majored in Computer Science and Mathematical Economics and played on the <a target=_blank href="https://mitathletics.com/sports/womens-volleyball/roster/annie-bryan/9290">volleyball team</a>. 
+            In May 2022, I graduated from MIT, where I double-majored in Computer Science and Mathematical Economics and played on the <a target=_blank href="https://mitathletics.com/sports/womens-volleyball/roster/annie-bryan/9290">volleyball team</a>. 
             <br><br>
             In my free time, I love to crochet and play with my dog, Tucker.
 					</h3>
